# ffov

./: Makefile  README.md  make.bat  pyproject.toml
ffov/: __main__.py  app.py  const.py
ffov/setters/: __init__.py  base.py  nv.py
